封装数组去重

--- a/src/assets/styles/ant-theme.less
+++ b/src/assets/styles/ant-theme.less
@@ -1,1 +1,15 @@
 @import "~antd/dist/antd.less"; // 引入官方提供的 less 样式入口文件
+
+@font-face {
+  font-family: '_SYHTSourceHanSansCN-Heavy';
+  src: url('../font/_SYHTSourceHanSansCN-Heavy.woff2') format('woff2'),
+    url('../font/_SYHTSourceHanSansCN-Heavy.woff') format('woff'),
+    url('../font/_SYHTSourceHanSansCN-Heavy.ttf') format('truetype'),
+    url('../font/_SYHTSourceHanSansCN-Heavy.eot') format('embedded-opentype'),
+    url('../font/_SYHTSourceHanSansCN-Heavy.svg') format('svg');
+}
+
+@font-family: '_SYHTSourceHanSansCN-Heavy';
+// @ant-prefix: ant;
+@typography-title-margin-top: 0; //标题的上外边距
+@typography-title-margin-bottom: 0; //标题下边距
