--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,3 +1,13 @@
+// 页面变灰
+// html {
+// -webkit-filter: grayscale(100%);
+// -moz-filter: grayscale(100%);
+// -ms-filter: grayscale(100%);
+// -o-filter: grayscale(100%);
+// filter: grayscale(100%);
+// filter: progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);
+// }
+
 .red {
   color: red;
 }
