-m状态转为redux管理

--- a/src/assets/styles/ant-theme.less
+++ b/src/assets/styles/ant-theme.less
@@ -14,8 +14,8 @@
 // @ant-prefix: 'xh';
 @typography-title-margin-top: 0; //标题的上外边距
 @typography-title-margin-bottom: 0; //标题下边距
+@layout-header-padding: 0 20px 0 0; //头部导航两边外边距
 @primary-color: #7CA4DE; // 全局主色
-
 // '@ant-prefix': 'xh',
 
 // '@text-color': '#000',
