--- a/src/assets/styles/ant-theme.less
+++ b/src/assets/styles/ant-theme.less
@@ -16,6 +16,7 @@
 @typography-title-margin-bottom: 0; //标题下边距
 @layout-header-padding: 0 20px 0 0; //头部导航两边外边距
 @primary-color: #7CA4DE; // 全局主色
+@tabs-bar-margin: 0; //tab栏外边距
 // '@ant-prefix': 'xh',
 
 // '@text-color': '#000',
